fixed there being a horizontal scrollbar on nav

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,8 +25,8 @@ nav{
     position: absolute;
     top: 0;
     left: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     display: none;
     z-index: 0;
 }
